--- a/css/style.css
+++ b/css/style.css
@@ -129,3 +129,53 @@ color: aliceblue;
 .slick-active button{
     background-color: yellow;
 }
+.bike__list{
+    margin-top: 25px;
+    display: flex;
+    justify-content: space-around;
+    }
+    .bike__list-item{
+        min-width: 160px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        min-height: 60px;
+    }
+    .bike__list-num{
+        font-weight: 700;   
+        text-transform: uppercase;
+    }
+    .bike__list-text{
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 15px; 
+        margin: auto 0 ;  
+    }
+
+.info{
+margin-bottom: 130px;
+ }
+.info__inner{
+     display: flex;
+}
+.info__img{
+    margin-right: 60px;
+    flex-basis: 570px;
+    object-fit: cover;
+}
+.info__list{
+    flex-basis: 490px;
+}
+.info__item + .info__item{
+margin-top: 50px;
+}
+.info__item-title{
+font-size: 16px;
+line-height: 19px;
+text-transform: uppercase;
+margin: 0 0 10px;
+}
+.info__item-text{
+max-width: 450px;
+}
