--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 ul{
     margin: 0;
+    padding: 0;
     list-style: none;
 
 }
@@ -17,6 +18,10 @@ li{
 a{
     text-decoration: none;
     color:inherit;
+}
+
+p{
+    margin: 0;
 }
 
 body{
@@ -178,4 +183,46 @@ margin: 0 0 10px;
 }
 .info__item-text{
 max-width: 450px;
+}
+.characteristics{
+    margin-bottom: 130px;
+}
+.characteristics__head{
+    margin: 0 0 40px;
+    font-size: 16px;
+    line-height: 19px;
+    text-transform: uppercase;
+}
+.characteristics__inner{
+    display: flex;
+}
+.characteristics__img{
+    align-self: center;
+    margin-left: 60px;
+}
+.characteristics__items{
+    flex-basis: 570px;  
+}
+.characteristics__list + .characteristics__list{
+    padding-top: 30px;
+    
+}
+.characteristics__title{
+    padding: 2px 0 3px;
+    text-transform: uppercase;
+    background-color: #131313;
+    color: #fff;
+    font-weight: 700px;
+   
+}
+.characteristics__line{
+    display: flex;
+    padding-top: 5px;
+}
+.characteristics_name{
+    flex-basis: 285px;
+    padding-right: 25px;
+}
+.characteristics_descr{
+    flex-basis: 285px;
 }
