--- a/css/style.css
+++ b/css/style.css
@@ -226,3 +226,139 @@ max-width: 450px;
 .characteristics_descr{
     flex-basis: 285px;
 }
+.slider{
+    margin-bottom: 50px;
+
+}
+.slider__items .slick-dots{
+    top:0px;
+    left: 0px;
+}
+.slider__item{
+    padding-left: 50px;
+}
+.price{
+    margin-bottom: 100px;
+    margin-top: 120px;
+}
+.form{
+    max-width: 420px;
+}
+.price__inner{
+    position: relative;
+}
+.form__title{
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+}
+.form__text{
+    width: 300px;
+    margin-bottom: 30px;
+
+}
+.form__btn{
+    width: 420px;
+    height: 80px;
+    text-transform: uppercase;
+    background-color: #131313;
+    color: #fff;
+    padding: 28px 81px;
+    border: none;
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 1.1em;
+    cursor: pointer;
+}
+.form__input-name,
+.form__input-phone{
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #131313;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+}
+.form__input-name::placeholder,
+.form__input-phone::placeholder,
+.form__input-text{
+    color: #6f6f6f;
+    opacity: 50%;
+}
+.form__input-text{
+    margin-bottom: 10px;
+}
+.form__label-box{
+    display: flex;
+    margin-bottom: 50px;
+}
+.form__input-radio{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+}
+.form__input-radio:checked + .form__bike{
+    display: block;
+}
+.form__bike{
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+.form__bike-price{
+    font-weight: 400;
+    font-size: 32px;
+    color: #131313;
+    position: absolute;
+    top: 30px;
+    left: 0;
+    right: 0;
+    width: 220px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border:1px solid #ff4040;
+    border-radius: 50%;
+    transform: translateX(-50%);
+
+}
+.form__bike-price::after{
+    content:"";
+    position: absolute;
+    width: 220px;
+    height: 100px;
+    border:1px solid #ff4040;
+    border-radius: 50%;
+    top: 10px;
+    left:0;
+}
+.form__radio-style{
+    background: #6F6F6F;
+    border-radius: 30px;
+    width: 80px;
+    height: 12px;
+    border: 1px solid #6F6F6F;
+
+}
+.form__radio-style--grey{
+    background: #6F6F6F;
+}
+.form__radio-style--white{
+    background: #fff;
+}
+.form__radio-style--red{
+    background: #FF4040;
+}
+.form__label + .form__label{
+    margin-left: 23px;
+}
+
+.form__bike-img{
+    width: 630px;
+    height: 403px;
+}
