--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,9 @@
 *::before{
     box-sizing: border-box;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 ul{
     margin: 0;
     padding: 0;
@@ -67,7 +69,7 @@ background-color: #131313;
 color: aliceblue;
 }
 .bike{
-    padding: 100px 0 150px;
+    padding: 100px 0 0px;
 }
 .bike__inner{
     display:flex;
@@ -102,11 +104,16 @@ color: aliceblue;
     display: inline-block;
     background-color: #131313;
     color: #fff;
-    padding: 28px 81px;
+    padding: 28px 71px 28px 81px;
     text-transform: uppercase;
     font-size: 20px;
     line-height: 24px;
     letter-spacing: 1.1em;
+    transition: all .3s;
+}
+
+.bike__link:hover{
+    background-color: #ff4040;
 }
 
 .bike-slider .slick-dots{
@@ -159,7 +166,8 @@ color: aliceblue;
     }
 
 .info{
-margin-bottom: 130px;
+margin-bottom: 30px;
+padding-top: 150px;
  }
 .info__inner{
      display: flex;
@@ -186,6 +194,7 @@ max-width: 450px;
 }
 .characteristics{
     margin-bottom: 130px;
+    padding-top: 100px;
 }
 .characteristics__head{
     margin: 0 0 40px;
@@ -265,12 +274,16 @@ max-width: 450px;
     text-transform: uppercase;
     background-color: #131313;
     color: #fff;
-    padding: 28px 81px;
+    padding: 28px 71px 28px 81px;
     border: none;
     font-size: 20px;
     line-height: 24px;
     letter-spacing: 1.1em;
     cursor: pointer;
+    transition: all .3s;
+}
+.form__btn:hover{
+    background-color: #ff4040;
 }
 .form__input-name,
 .form__input-phone{
@@ -361,4 +374,45 @@ max-width: 450px;
 .form__bike-img{
     width: 630px;
     height: 403px;
+}
+
+.footer{
+    background-color: #131313;
+}
+.footer__inner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+}
+.footer__contacts{
+    
+    font-size: 12px;
+    line-height: 15px;
+    color: #fff; 
+}
+.footer__social-link +.footer__social-link{
+    margin-left: 30px;
+   
+}
+
+.footer__link{
+    color: #fff;
+    border: 1 px solid #fff;
+    text-decoration: underline;
+    font-size: 12px;
+    line-height: 15px;
+}
+.footer__contacts-link + .footer__contacts-link{
+    margin-top: 10px;
+
+}
+
+.footer__contacts-link{
+    display: flex;
+    align-items: center;
+}
+.footer__contacts-img {
+    margin-right: 10px;
+    
 }
